tests/reference/llvm-expr2-6f9abe8.stderr
syntax error: Statement or Declaration expected inside program, found Expression
 --> tests/expr2.f90:1:1
  |
1 | 5+3
  | ^^^ 
